# Gusto

./: README
AutoTools/: configure.ac  setup_AutoTools.sh
AutoTools/data/: gusto.1
AutoTools/src/: Makefile.am
Autotools/: AUTHORS  Makefile.am  configure.ac  setup_AutoTools.sh
Autotools/data/: Makefile.am  gusto.1
Autotools/data/icons/: Makefile.am  gusto.xcf
DEBS/: control_template  gusto_0.69-1.deb
DEBS/gusto_0.69-1/DEBIAN/: control
DEBS/gusto_0.69-1/usr/share/applications/: gusto.desktop
GSTREAMER/: gst_playback_tutorial_1.c  playback-tutorial-1
TEST_DATA/: cmds
src/: Makefile  Makefile.win  callbacks.c  convert.c  css.c  defs.h  gusto.c  main.h  main_ui.c  user_data.h  utility.c  version.h
