# Needs to end up as: /usr/share/icons/hicolor/48x48/apps
icondir = ${datadir}/icons/hicolor/128x128/apps
# Needs to end up as: /usr/share/pixmaps/gusto
pixmapsdir = ${datadir}/pixmaps/gusto
icon_DATA = gusto.png 
pixmaps_DATA = gusto.png 

dist_doc_DATA = $(icon_DATA)

#EXTRA_DIST = \
#	$(icon_DATA) \
#	$(pixmaps_DATA)

MAINTAINERCLEANFILES = $(icon_DATA)
